# do-you-miss-raving

./: CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  Map.cpp  Map.h  Math.cpp  Math.h  Player.cpp  Player.h  README.md  Raycaster.cpp  Raycaster.h  Scene.cpp  Scene.h  config.h  main.cpp
editor/: docker-compose.yaml
editor/authService/app/Http/Controllers/: UserController.php
editor/authService/app/Http/Controllers/Auth/: AuthenticatedSessionController.php  RegisteredUserController.php
editor/authService/app/Http/Resources/: PublicUserResource.php
editor/authService/app/Providers/: AuthServiceProvider.php
editor/authService/config/: app.php
editor/authService/database/migrations/: 2014_10_12_000000_create_users_table.php
editor/authService/database/seeders/: DatabaseSeeder.php
editor/authService/docker/: Dockerfile
editor/authService/docker/nginx/conf.d/: default.conf
editor/authService/routes/: api.php
editor/frontend/: package-lock.json  package.json  tailwind.config.ts
editor/frontend/src/app/: globals.scss  layout.tsx  loading.tsx  not-found.tsx  page.tsx  style.module.scss  variables.module.scss
editor/frontend/src/app/admin/: layout.tsx  page.tsx  style.scss
editor/frontend/src/app/admin/maps/: page.tsx
editor/frontend/src/app/admin/maps/[id]/: Canvas.tsx  Properties.tsx  Textures.tsx  Title.tsx  page.tsx
editor/frontend/src/app/admin/maps/[id]/lib/: Canvas.tsx  Sprites.tsx  Textures.tsx  Title.tsx  editor.ts
editor/frontend/src/app/admin/maps/[id]/lib/properties/: MapProperties.tsx  Properties.tsx  SpriteProperties.tsx  TextureField.tsx  TileProperties.tsx
editor/frontend/src/app/admin/maps/[id]/lib/textures/: EditModal.tsx  Textures.tsx  UploadModal.tsx
editor/frontend/src/app/admin/maps/create/: page.tsx
editor/frontend/src/app/login/: page.tsx
editor/frontend/src/app/register/: page.tsx
editor/frontend/src/components/: Canvas.tsx  Editor.tsx  Loading.tsx  Modal.tsx  Panel.tsx  Properties.tsx  Textures.tsx  Title.tsx
editor/frontend/src/components/form/: FormError.tsx  FormGroup.tsx  FormInput.tsx
editor/frontend/src/lib/: editor.ts  types.ts  utils.ts
editor/frontend/src/lib/contexts/: editor.ts
editor/mapService/: Dockerfile  custom.d.ts  package-lock.json  package.json
editor/mapService/src/: main.ts  utils.ts
editor/mapService/src/models/: map.ts
editor/mapService/src/routes/: maps.ts  sprites.ts  textures.ts  tiles.ts
editor/nginxProxy/: nginx.conf
editor/userService/docker/: Dockerfile
editor/userService/docker/nginx/conf.d/: default.conf
editor/userService/routes/: api.php
engine/: Entity.cpp  Entity.h  Game.cpp  Game.h  Scene.cpp  Scene.h
game/entities/: AStar.cpp  AStar.h  Enemy.cpp  Enemy.h  Killer.cpp  Killer.h  Map.cpp  Map.h  Player.cpp  Player.h  SSprite.cpp  SSprite.h  SpriteEntity.cpp  SpriteEntity.h
game/graphics/: Raycaster.cpp  Raycaster.h  UserInterface.cpp  UserInterface.h
lib/imgui/: imgui.h
resources/sources/: bar chair.aseprite  glob.aseprite
utils/: Constants.h  Math.cpp  Math.h  Paths.h
